# gutenbergpy

./: .gitignore  README.md  pyproject.toml  test.py
gutenbergpy/: gutenbergcache.py  gutenbergcachesettings.py  orderedset.py  textget.py  utils.py
gutenbergpy/caches/: sqlitecache.py
gutenbergpy/parse/: rdfparser.py
