[tool.poetry]
name = "gutenbergpy"
version = "0.3.3"
description = "Library to create and interogate local cache for Project Gutenberg"
authors = ["Radu Angelescu <raduangelescu@gmail.com>"]
license = "LICENSE.txt"

[tool.poetry.dependencies]
python = "^3.9"
future = "^0.18.2"
httpsproxy_urllib2 = "^1.0"
lxml = "^4.9.0"
pymongo = "^4.1.1"
chardet = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
